Added Aspect-Logging
Transitioned to log4j-slf4j2-impl
Reconfigured log4j2.xml to use pretty colors on console and more info in log files.